# NGPS

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  HOW_TO_DEPLOY.TXT  bashrc  bashrc_user  env.sh  startall
.githooks/: pre-commit
Andor/: CMakeLists.txt  andor.cpp  andor.h  andor_emulator.cpp  andor_emulator.h  diff  fits.h  sim.cpp  sim_andor.cpp  sim_andor.h
AndorCamera2/: AndorCamera2.cpp  AndorCamera2.h  CMakeLists.txt
Arduino/: README.md
BrainBox/: CMakeLists.txt  brainbox.cpp  brainbox.h  brainbox_test.cpp
Config/: .gitignore  acamd.cfg.in  andorserver.cfg.in  calibd.cfg.in  camerad.cfg.in  ets8p  filterd.cfg.in  flexured.cfg.in  focusd.cfg.in  gui.config  java-config  messaged.cfg.in  portdefs  powerd.cfg.in  privatelan  sequencerd.cfg.in  slicecamd.cfg.in  slitd.cfg.in  tcsd.cfg.in  telemd.cfg.in  thermald.cfg.in
Galil/: CMakeLists.txt  galil.cpp  galil.h  galil_interface_impl.h
GuiderGUI/: .gitignore  README.md  acam_calibrate.sh  acquire_last.sh  get_crosshair_pos.sh  grabfits.sh  gui.config  guide_here.sh  guide_start.sh  help_guider.txt  help_slicev.txt  jog_scam.sh  jogset.sh  keepalive_gui.sh  killall_gui.sh  launch_gui.sh  make_guider_fifo.sh  make_slicev_fifo.sh  message.sh  push_image.sh  push_settings_guider.sh  push_settings_slicev.sh  putonslit.sh  save_series.sh  show_tcs_guider.sh  slitcenter.reg  sync_display.sh  template_guider.ans  template_slicev.ans
LKS/: CMakeLists.txt  lks.cpp  lks.h
PI/: CMakeLists.txt  pi.cpp  pi.h  pi_error.h
WTI/: CMakeLists.txt  wti.cpp  wti.h
acamd/: .acamd.cpp.swp  CMakeLists.txt  acam_fits.cpp  acam_fits.h  acam_interface.cpp  acam_interface.h  acam_interface_shared.h  acam_server.cpp  acam_server.h  acamd.cpp  acamd.h  camera.h  fits.h  motion_interface.cpp  motion_interface.h  newpytest.cpp  pytest.cpp  simpletest.cpp
calibd/: CMakeLists.txt  calib_interface.cpp  calib_interface.h  calib_server.cpp  calib_server.h  calibd.cpp  calibd.h
camera_clean/: CMakeLists.txt  astrocam_controller.cpp  astrocam_controller.h  astrocam_interface.cpp  astrocam_interface.h  camera_information.h  camera_interface.cpp  camera_interface.h  camera_server.cpp  camera_server.h  camerad.cpp  camerad.h  daemon_config.h  shutter.h
camerad/: CMakeLists.txt  CMakeLists.txt.new  CMakeLists.txt.orig  astrocam.cpp  astrocam.h  camera.cpp  camera.h  camerad.cpp  camerad.h  fits.h  generic-arc.cpp  simulator-arc.cpp  simulator-arc.h
common/: CMakeLists.txt  acamd_commands.h  calibd_commands.h  camerad_commands.h  common.cpp  common.h  common.h.bak  db_column_defs.h  filterd_commands.h  fits_header_defs.h  flexured_commands.h  focusd_commands.h  message_keys.h  motion_controller.cpp  motion_controller.h  motion_controller_impl.h  motion_controller_interface_base.h  motion_interface_impl.h  ngps_acq_embed.h  powerd_commands.h  sequencerd_commands.h  skyinfo.cpp  skyinfo.h  slicecamd_commands.h  slitd_commands.h  tcs_constants.h  tcsd_commands.h  telemd_commands.h  thermald_commands.h
docs/: requirements.txt
emulator/: CMakeLists.txt  acam.cpp  acam.h  acam_pi.cpp  acam_pi.h  andorserver.cpp  andorserver.h  andorsim.cpp  andorsim.h  atmcdLXdsim.cpp  calib.cpp  calib.h  camera.cpp  camera.h  emulatord_acam.cpp  emulatord_acam.h  emulatord_acam_pi.cpp  emulatord_acam_pi.h  emulatord_andorserver.cpp  emulatord_andorserver.h  emulatord_calib.cpp  emulatord_calib.h  emulatord_camera.cpp  emulatord_camera.h  emulatord_filter.cpp  emulatord_filter.h  emulatord_flexure.cpp  emulatord_flexure.h  emulatord_focus.cpp  emulatord_focus.h  emulatord_power.cpp  emulatord_power.h  emulatord_slit.cpp  emulatord_slit.h  emulatord_tcs.cpp  emulatord_tcs.h  filter.cpp  filter.h  flexure.cpp  flexure.h  (+8 more)
flexured/: CMakeLists.txt  flexure_compensator.cpp  flexure_compensator.h  flexure_interface.cpp  flexure_interface.h  flexure_server.cpp  flexure_server.h  flexured.cpp  flexured.h  tcs_info.h
focusd/: CMakeLists.txt  focus_interface.cpp  focus_interface.h  focus_server.cpp  focus_server.h  focusd.cpp  focusd.h
messaged/: CMakeLists.txt  messaged.cpp
mysql/: HOWTO-BACKUP.txt  add-user.sh  backup-all.sh  backup-structure-ngps.sql  backup-structure-telemetry.sql  backup-structure-telemtry.sql  completed_obs_template.sql  delete-user.sh  list-users.sh  move-mysql-db.txt  mysql-allschema.sql  mysql-tables.sql  mysql-users.sql  mysql-users.txt  reset-password.sh  (+2 more)
powerd/: CMakeLists.txt  power_interface.cpp  power_interface.h  power_server.cpp  power_server.h  powerd.cpp  powerd.h
sequencerd/: ._sequencerd.cpp  .sequence.cpp.swp  .sequencer_server.cpp.swp  CMakeLists.txt  command.h  command_rules.h  operation_builders.cpp  sequence.cpp  sequence.h  sequence_acquisition.cpp  sequence_builder.cpp  sequence_operations.cpp  sequence_wait.cpp  sequencer_interface.cpp  sequencer_interface.h  sequencer_server.cpp  sequencer_server.h  sequencerd.cpp  sequencerd.h
slicecamd/: CMakeLists.txt  guimanager.h  ngps_acq.c  slicecam_camera.cpp  slicecam_camera.h  slicecam_fits.cpp  slicecam_fits.h  slicecam_interface.cpp  slicecam_interface.h  slicecam_math.cpp  slicecam_math.h  slicecam_server.cpp  slicecam_server.h  slicecamd.cpp  slicecamd.h
slitd/: CMakeLists.txt  slit_interface.cpp  slit_interface.h  slit_server.cpp  slit_server.h  slitd.cpp  slitd.cpp.old  slitd.h  slitd.h.old
tcsd/: CMakeLists.txt  tcs_interface.cpp  tcs_interface.cpp.bak  tcs_interface.h  tcs_server.cpp  tcs_server.h  tcsd.cpp  tcsd.h  tcsd_client.cpp  tcsd_client.h
thermald/: CMakeLists.txt  thermal_interface.cpp  thermal_interface.h  thermal_server.cpp  thermal_server.h  thermald.cpp  thermald.h
tools/ngps_db_gui/: CMakeLists.txt  README.md  main.cpp
utils/: CMakeLists.txt  build_date.h  common.h  config.h  cpython.h  daemonize.h  database.cpp  database.h  fits.h  listener.c  listener.cpp  logentry.cpp  logentry.h  make_directories.cpp  md5.c  md5.h  network.cpp  network.h  sendcmd.c  sendcmd.cpp  seq_progress_gui.cpp  seqmon.cpp  thread_pool.h  utilities.cpp  utilities.h
utils/seqgui/: broadcast_log.py  panels.py  seqgui.py  udp_service.py  zmq_service.py
(+2894 files in other folders)
