# ----------------------------------------------------------------------------
# @file    calibd/CMakeLists.txt
# @brief   input to the CMake build system for building calib daemon
# @author  David Hale <dhale@caltech.edu>
# ----------------------------------------------------------------------------

cmake_minimum_required( VERSION 3.12 )

set( CALIBD_DIR ${PROJECT_BASE_DIR}/calibd )

set( CMAKE_CXX_STANDARD 17 )

include_directories( ${PROJECT_BASE_DIR}/utils )
include_directories( ${PROJECT_BASE_DIR}/PI )
include_directories( ${PROJECT_BASE_DIR}/common )

link_directories( ${PROJECT_BASE_DIR}/lib )

# ZeroMQ
#
find_library( ZMQPP_LIB zmqpp NAMES libzmqpp PATHS /usr/local/lib )
find_library( ZMQ_LIB zmq NAMES libzmq PATHS /usr/local/lib )

add_executable(calibd 
        ${CALIBD_DIR}/calibd.cpp 
        ${CALIBD_DIR}/calib_server.cpp 
        ${CALIBD_DIR}/calib_interface.cpp 
        )

target_link_libraries(calibd
        physik_instrumente
        network
        common
        logentry
        utilities
        ${CMAKE_THREAD_LIBS_INIT}
        ${ZMQPP_LIB}
        ${ZMQ_LIB}
        )

# -- Port Definitions ----------------------------------------------------------
#
# portdefs is the master list of ports for NGPS and is used to generate the
# individual .cfg files to avoid conflicts across multiple files, by keeping
# them all in one place..
#
INCLUDE( ${PROJECT_BASE_DIR}/Config/portdefs )
INCLUDE( ${PROJECT_BASE_DIR}/Config/ets8p )
INCLUDE( ${PROJECT_BASE_DIR}/Config/privatelan )
set ( CALIBD_CFG_COMMENT "This file is automatically generated. Manual edits may be overwritten." )
CONFIGURE_FILE( ${PROJECT_BASE_DIR}/Config/calibd.cfg.in ${PROJECT_BASE_DIR}/Config/calibd.cfg )
